# ai-security-tools

./: .gitignore  README.md  ROADMAP.md  config.yaml  conftest.py  pyproject.toml  requirements.txt
configs/: injection_patterns.yaml  reference_injections.json
docs/: architecture.md  detector_design.md  kerberos.md  redteam_methodology.md
examples/: kerberos_scan_example.json
src/: kerberos_scanner.py
src/detector/: __init__.py  embedding_detector.py  hybrid_detector.py  llm_judge.py  rule_engine.py  tokenizer_detector.py  web_app.py
src/scanners/: __init__.py  adcs_scanner.py  cloud_scanner.py
tests/: test_adcs_scanner.py  test_cloud_scanner.py  test_embedding_detector.py  test_hybrid_detector.py  test_kerberos_scanner.py  test_rule_engine.py  test_tokenizer_detector.py
tests/fixtures/: benign_prompts.json  malicious_prompts.json
