[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-security-tools"
version = "0.1.0"
description = "AI Security Tooling Framework — Prompt injection detection, agent safety, LLM red teaming"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Kevin", email = "gachokakevin8@gmail.com"}
]
keywords = ["ai-security", "prompt-injection", "llm-security", "red-teaming", "cybersecurity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "tiktoken>=0.7.0",
    "sentence-transformers>=3.0.1",
    "torch>=2.3.1",
    "numpy>=1.26.4",
    "regex>=2024.7.24",
    "pyyaml>=6.0.1",
    "pydantic>=2.7.4",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
llm = [
    "openai>=1.35.3",
    "anthropic>=0.28.1",
]
local-llm = [
    "llama-cpp-python>=0.2.90",
]
dev = [
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "black>=24.4.2",
    "ruff>=0.4.6",
    "mypy>=1.10.0",
    "pre-commit>=3.7.1",
]
all = [
    "openai>=1.35.3",
    "anthropic>=0.28.1",
    "llama-cpp-python>=0.2.90",
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "black>=24.4.2",
    "ruff>=0.4.6",
    "mypy>=1.10.0",
    "pre-commit>=3.7.1",
]

[project.urls]
Homepage = "https://github.com/creator-kev/ai-security-tools"
Repository = "https://github.com/creator-kev/ai-security-tools"
Issues = "https://github.com/creator-kev/ai-security-tools/issues"

[project.scripts]
ai-security-tools-ui = "detector.web_app:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["detector*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow (requires model downloads)",
    "integration: marks tests as integration tests",
    "requires_api: marks tests that require API keys",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not use mutable data structures for defaults
]
extend-exclude = ".venv"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[tool.coverage.run]
source = ["src/detector"]
omit = ["tests/*", "conftest.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
